--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/identify?autoReconnect=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/kulijin
 jdbc.username=root
 jdbc.password=123456
